whatsmyip/service.yml
apiVersion: v1
kind: Service
metadata:
  name: whatsmyip-service
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: whatsmyip
